# helvetia

./: CHANGELOG.md  Cargo.toml  NOTICE.md  README.md  build.rs
.github/workflows/: CI.yaml  CI_client.yaml
client/: CHANGELOG.md  Cargo.toml  README.md
client/src/: client.rs  errors.rs  lib.rs
proto/: mod.rs  secret.proto  secret.rs
src/: api.rs  ct.rs  hkdf.rs  hmac.rs  lib.rs  main.rs  res.rs  secret.rs  vault.rs
tests/: test_cli.rs
