[package]
name = "helvetia"
version = "0.1.1"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = """
A library and API server that allows anonymous storage of secrets, with a simple
rule; any user can create a secret using a token, and they can only access it
using the same token.
"""
homepage = "https://github.com/apyrgio/helvetia"
repository = "https://github.com/apyrgio/helvetia"
readme = "README.md"
keywords = ["encryption", "security", "vault", "rest", "cli"]
categories = ["command-line-utilities", "cryptography"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
caves = "0.2"
protobuf = "2"
# XXX: There are no stable versions of `ring` [1], meaning that we must always
# compile the newest version to ensure that the latest security patches are
# there. However, this means that our library may break whenever `ring` changes
# its API. We'll pin the `ring` version for now, but we have to find a way to
# deal with this at some point.
#
# [1]: https://github.com/briansmith/ring#versioning--stability
ring = "0.16"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
subtle = "2"
thiserror = "1.0"
tindercrypt = "0.3"
tokio = { version = "1", features = ["full"]  }
warp = "0.3"

# NOTE: The following dependencies are required only for the CLI version of the
# crate, and are only included if the `cli` feature is enabled. See also
# https://github.com/rust-lang/cargo/issues/1982, for the current state of
# binary-only dependencies in `cargo`.
clap = { version = "2", optional = true }
strum = { version = "0.20", optional = true }
strum_macros = { version = "0.20", optional = true }

[dev-dependencies]
assert_cmd = "1"
assert_fs = "1"
hex = "0.4"
predicates = "1"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }

[build-dependencies]
protoc-rust = { version = "2", optional = true }

[features]
default = ["cli"]

# Dependencies needed specifically for the CLI.
cli = ["clap", "strum", "strum_macros"]
# Generate Rust code from .proto files.
proto-gen = ["protoc-rust"]
# Enable RocksDB support.
with-rocksdb = ["caves/with-rocksdb"]
