[package]
name = "helvetia_client"
version = "0.1.0"
authors = ["Alex Pyrgiotis <apyrgio@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
description = """
An HTTP client for the Helvetia API.
"""
homepage = "https://github.com/apyrgio/helvetia/client"
repository = "https://github.com/apyrgio/helvetia"
readme = "README.md"
keywords = ["rest", "http"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
thiserror = "1"
url = "2"

[dev-dependencies]
httpmock = "0.5"
tokio = { version = "1", features = ["rt", "net"]  }
serde_json = "1"
